scripts/nullaway/annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8.txt
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:1356: error: [NullAway] dereferenced expression graph.get(node1) is @Nullable
				graph.get(node1).add(node2);
				                ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:1373: error: [NullAway] dereferenced expression graph.get(node2) is @Nullable
				graph.get(node2).add(node1);
				                ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:1455: error: [NullAway] enhanced-for expression graph.get(no) is @Nullable
			    for (Integer edge : graph.get(no))
			                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:1487: error: [NullAway] dereferenced expression greatestComponent is @Nullable
			    if ( greatestComponent.contains(node1) && greatestComponent.contains(node2) ) {
			                          ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:1538: error: [NullAway] dereferenced expression chosenRow is @Nullable
	    if ( chosenRow.degree > 0 ) {
	                  ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:2271: error: [NullAway] dereferenced expression graph.get(node1) is @Nullable
				graph.get(node1).add(node2);
				                ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:2282: error: [NullAway] dereferenced expression graph.get(node2) is @Nullable
				graph.get(node2).add(node1);
				                ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:2342: error: [NullAway] enhanced-for expression graph.get(no) is @Nullable
			    for (Integer edge : graph.get(no))
			                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:2370: error: [NullAway] dereferenced expression visited is @Nullable
			    if ( visited.contains(node1) && visited.contains(node2) ) { // found 2 ones (edge) in component
			                ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:2424: error: [NullAway] dereferenced expression chosenRow is @Nullable
	    if ( chosenRow.degree > 0 ) {
	                  ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Utilities.java:378: error: [NullAway] dereferenced expression s2 is @Nullable
			xor[i] = (byte) (s1[pos1+i] ^ s2[pos2+i]);
			                                ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/LinearSystem.java:615: error: [NullAway] dereferenced expression graph.get(node1) is @Nullable
	            					 graph.get(node1).add(node2);
	            					                 ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/LinearSystem.java:635: error: [NullAway] dereferenced expression graph.get(node2) is @Nullable
	            					 graph.get(node2).add(node1);
	            					                 ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/LinearSystem.java:725: error: [NullAway] enhanced-for expression graph.get(no) is @Nullable
	            				 for(Integer edge : graph.get(no))
	            				                             ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/LinearSystem.java:761: error: [NullAway] dereferenced expression greatestComponent is @Nullable
	            				 if(greatestComponent.contains(node1) && greatestComponent.contains(node2))
	            				                     ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/LinearSystem.java:820: error: [NullAway] dereferenced expression chosenRow is @Nullable
	             if(chosenRow.degree > 0)
	                         ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/test/encodecode/StatsType.java:83: error: [NullAway] dereferenced expression stats.getNext() is @Nullable
                final long totalDecodings = stats.getNext().getCount();
                                                           ^
    (see http://t.uber.com/nullaway )
../annotator/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/test/TestRunner.java:158: error: [NullAway] dereferenced expression e.getCause() is @Nullable
            e.getCause().printStackTrace();
                        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
18 errors
